GNOME Bugzilla – Bug 709738
when gnome-software fails to install a application, it fails silently
Last modified: 2013-10-17 12:23:18 UTC
When installing an application, if the application fails to install for some reason, the "installing..." prompt at the top right just goes back to the blue install button. The thinking behind this bug is to decide if gnome-software should provide some sort of feedback to the user as to why the installation failed? I first hit this issue due to this bug -- https://bugzilla.gnome.org/show_bug.cgi?id=709676 but i have also encountered it when gnome-software fails a transaction due to a dependency issue. (my specific case was that i had a development version of gegl installed, and gnome-photos required an older version)
commit d3e9c9ff48b1b1f2189e7805b50ed4a8c8dddd21 Author: Richard Hughes <richard@hughsie.com> Date: Thu Oct 17 13:22:53 2013 +0100 Show a modal error message if install or remove actions failed Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=709738