Show a modal error message if install or remove actions failed

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=709738